--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,3 +1,6 @@
-/* font-family: 'Josefin Sans', sans-serif;
+@import "setup";
+@import "mixins";
+@import "variables";
 
-font-family: 'Roboto', sans-serif; */
+@import "header";
+
